Changed all Arrays to Linked List